# dj_to

./: .gitignore  Dockerfile  compose.yml  pyproject.toml
dj_to/app/: settings.py
src/app/: settings.py
